--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,6 @@ b {
 /* Launching Section */
 @media screen and (max-width: 768px) {
   .launching {
-    min-height: 100vh;
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -295,8 +294,8 @@ b {
   .countdown h1 {
     font-style: normal;
     font-weight: normal;
-    font-size: 32px;
-    line-height: 36px;
+    font-size: 28px;
+    line-height: 30px;
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
@@ -366,8 +365,7 @@ b {
 
   /* App-Preview Section */
   .app-preview {
-    min-height: 100vh;
-    margin-top: 0px;
+    margin-top: 100px;
     position: relative;
     overflow: hidden;
   }
@@ -476,6 +474,15 @@ b {
 @media screen and (min-width:300px) and (max-width: 400px) {
      /* About-Us Section */
 
+     .countdown h1 {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 24px;
+      text-align: center;
+      letter-spacing: 0.02em;
+      color: #ffffff;
+    }
   .about-us {
     background-image: url("../images/Rectangle\ 74.png"),
       linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
