--- a/assets/css/clock.css
+++ b/assets/css/clock.css
@@ -1,4 +1,3 @@
-
 ul, ol, dl {
 	padding: 0;
 	margin: 0;
@@ -12,8 +11,7 @@ ul, ol, dl {
 	margin: 50px auto 0;
 	background: -webkit-linear-gradient(top,#f5f5f5,#ececec);
 	background: -moz-linear-gradient(top,#f5f5f5,#ececec);
-	box-shadow: inset 0px 1px 2px #fff;
-	-webkit-box-shadow: inset 0px 1px 2px #fff;	
+
 }
 #clock::before{
 	width: 300px;
@@ -25,8 +23,7 @@ ul, ol, dl {
 	border-radius: 150px;
 	background: -webkit-linear-gradient(top,#e7e7e7,#fff);
 	background: -moz-linear-gradient(top,#e7e7e7,#fff);
-	box-shadow: inset 0px 1px 1px #fff;
-	-webkit-box-shadow: inset 0px 1px 1px #fff;
+
 }
 #clock::after{
 	width: 500px;
@@ -36,7 +33,7 @@ ul, ol, dl {
 	left: 0;
 	content: "";
 	border-radius:250px;
-	box-shadow: 0 20px 30px #999;
+
 }
 #time{
 	position: absolute;
@@ -48,9 +45,9 @@ ul, ol, dl {
 	z-index: 9;
 	background: -webkit-linear-gradient(top,#555,#121212);
 	background: -moz-linear-gradient(top,#555,#121212);
-	box-shadow: 0 2px 3px #666;
+
 }
-#time li{
+#time p{
 	width: 40px;
 	height: 40px;
 	border-radius: 20px;
@@ -58,14 +55,29 @@ ul, ol, dl {
 	text-align:center;
 	line-height: 40px;
 	color: #999;
-	text-shadow: 0 1px 0 #fff;
+
 }
 #time .ts{
 	background: -webkit-linear-gradient(top,#e0e0e0,#f7f7f7);
 	background: -moz-linear-gradient(top,#e0e0e0,#f7f7f7);
-	box-shadow: inset 0px 1px 1px #fff;
-	-webkit-box-shadow: inset 0px 1px 1px #fff;
+
 	color: #000;
+}
+#time .t2{
+    left: 190px;
+    top: -15px;
+}
+#time .t4{
+    right: 190px;
+    top: -10px;
+}
+#time .t1{
+    bottom: 190px;
+    right: -10px;
+}
+#time .t3{
+    top: 190px;
+    right: -10px;
 }
 #hour,#minute,#second{
 	position: absolute;
@@ -130,10 +142,7 @@ ul, ol, dl {
 	border-radius:125px;
 	position: relative;
 	margin: 25px auto 0;
-	background: -webkit-linear-gradient(top,#f5f5f5,#ececec);
-	background: -moz-linear-gradient(top,#f5f5f5,#ececec);
-	box-shadow: inset 0px 1px 2px #fff;
-	-webkit-box-shadow: inset 0px 1px 2px #fff;	
+
 }
 #clock::before{
 	width: 150px;
@@ -143,10 +152,7 @@ ul, ol, dl {
 	top: 50px;
 	left: 50px;
 	border-radius: 75px;
-	background: -webkit-linear-gradient(top,#e7e7e7,#fff);
-	background: -moz-linear-gradient(top,#e7e7e7,#fff);
-	box-shadow: inset 0px 1px 1px #fff;
-	-webkit-box-shadow: inset 0px 1px 1px #fff;
+
 }
 #clock::after{
 	width: 250px;
@@ -156,7 +162,6 @@ ul, ol, dl {
 	left: 0;
 	content: "";
 	border-radius:125px;
-	box-shadow: 0 20px 30px #999;
 }
 #time{
 	position: absolute;
@@ -166,19 +171,39 @@ ul, ol, dl {
 	height: 10px;
 	border-radius: 5px;
 	z-index: 9;
-	background: -webkit-linear-gradient(top,#555,#121212);
-	background: -moz-linear-gradient(top,#555,#121212);
-	box-shadow: 0 2px 3px #666;
 }
-#time li{
-	display: none;
+#time p{
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	position: absolute;
+	text-align:center;
+	line-height: 30px;
+	color: #FFFFFF;
+}
+#time i{
+    font-size: 12px;
 }
 #time .ts{
-	background: -webkit-linear-gradient(top,#e0e0e0,#f7f7f7);
-	background: -moz-linear-gradient(top,#e0e0e0,#f7f7f7);
-	box-shadow: inset 0px 1px 1px #fff;
-	-webkit-box-shadow: inset 0px 1px 1px #fff;
+	/* background: -webkit-linear-gradient(top,#e0e0e0,#f7f7f7);
+	background: -moz-linear-gradient(top,#e0e0e0,#f7f7f7); */
 	color: #000;
+}
+#time .t2{
+    left: 90px;
+    top: -12px;
+}
+#time .t4{
+    right: 90px;
+    top: -10px;
+}
+#time .t1{
+    bottom: 75px;
+    right: -8px;
+}
+#time .t3{
+    top: 95px;
+    right: -10px;
 }
 #hour,#minute,#second{
 	position: absolute;
@@ -195,6 +220,15 @@ ul, ol, dl {
 	background: -webkit-linear-gradient(top,#c00,#ff4d4d);
 	background: -moz-linear-gradient(top,#c00,#ff4d4d);
 	position: relative;
+}
+#second p{
+    font-size: 8px;
+}
+#minute p{
+    font-size: 8px;
+}
+#hour p{
+    font-size: 8px;
 }
 #second::before{
 	width: 1.5px;
